[package]
name = "rvpacker-txt-rs-lib"
version = "9.0.4"
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2021"
rust-version = "1.80.0"
description = "Library that allows you to generate text files from RPG Maker files."
documentation = "https://docs.rs/rvpacker-txt-rs-lib"
readme = "README.md"
repository = "https://github.com/savannstm/rvpacker-txt-rs-lib"
license-file = "LICENSE.md"

[dependencies]
encoding_rs = "0.8.35"
flate2 = "1.1.2"
indexmap = "2.11.4"
marshal-rs = "1.1.1"
regex = "1.11.3"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde = { version = "1.0.227" }
phf = { version = "0.13.1", features = ["macros"] }
smallvec = "1.15.1"
gxhash = "3.5.0"
const_format = "0.2.34"
bitflags = { version = "2.9.4", features = ["serde"] }
strum_macros = "0.27.2"
thiserror = "2.0.16"
num_enum = "0.7.4"
getset = "0.1.6"
log = "0.4.28"
