[package]
name = "rvpacker-txt-rs-lib"
version = "11.0.0"
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2021"
rust-version = "1.82.0"
description = "Library that allows you to generate text files from RPG Maker files."
documentation = "https://docs.rs/rvpacker-txt-rs-lib"
readme = "README.md"
repository = "https://github.com/savannstm/rvpacker-txt-rs-lib"
license-file = "LICENSE.md"

[dependencies]
encoding_rs = "0.8.35"
flate2 = "1.1.7"
indexmap = "2.12.1"
marshal-rs = "2.0.0"
regex = "1.12.2"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde = { version = "1.0.228" }
phf = { version = "0.13.1", features = ["macros"] }
smallvec = "1.15.1"
gxhash = "3.5.0"
const_format = "0.2.35"
bitflags = { version = "2.10.0", features = ["serde"] }
strum_macros = "0.27.2"
thiserror = "2.0.17"
num_enum = "0.7.5"
getset = "0.1.6"
log = "0.4.29"
