[package]
name = "rvpacker-txt-rs-lib"
version = "11.1.2"
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2021"
rust-version = "1.82.0"
description = "Library that allows you to generate text files from RPG Maker files."
documentation = "https://docs.rs/rvpacker-txt-rs-lib"
readme = "README.md"
repository = "https://github.com/savannstm/rvpacker-txt-rs-lib"
license-file = "LICENSE.md"

[dependencies]
encoding_rs = "0.8.35"
flate2 = "1.1.9"
indexmap = "2.13.0"
marshal-rs = "2.0.0"
regex = "1.12.3"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde = { version = "1.0.228" }
phf = { version = "0.13.1", features = ["macros"] }
smallvec = "1.15.1"
gxhash = { version = "3.5.0", features = ["deterministic"] }
const_format = "0.2.35"
bitflags = { version = "2.11.0", features = ["serde"] }
strum_macros = "0.27.2"
thiserror = "2.0.18"
num_enum = "0.7.5"
log = "0.4.29"
strum = { version = "0.27.2", features = ["strum_macros"] }
rayon = { version = "1.11.0", optional = true }

[features]
parallel = ["dep:rayon"]
